Fix bug: input can't type on safari

--- a/css/style.sass
+++ b/css/style.sass
@@ -30,7 +30,6 @@ $linkBg: #E7E7E7
   font-family: 'Roboto Condensed','微軟正黑體', sans-serif
   letter-spacing: 0.5px
   cursor: default
-  user-select: none
   outline: none
   appearance: none
 
